# XBotCore

./: .gitignore  CMakeLists.txt  README.md  XCMConfig.cmake.in  package.xml
cmake/: FindXenomai.cmake
configs/: config_3_test.yaml  config_walkman.yaml
configs/joint_map/: bigman_ecat_joint_map.yaml  bigman_ecat_test.yaml
configs/srdf/: bigman_config.srdf  bigman_config.srdf.old  bigman_config.srdf.xacro
configs/urdf/: bigman.urdf
doc/: CMakeLists.txt  Doxyfile.in  XCM.dox
docs/: AdvrCommandMessage_8cpp.html  AdvrCommandMessage_8cpp__incl.map  AdvrCommandMessage_8cpp__incl.md5  AdvrCommandMessage_8cpp_source.html  AdvrCommandMessage_8h.html  AdvrCommandMessage_8h__dep__incl.map  AdvrCommandMessage_8h__dep__incl.md5  AdvrCommandMessage_8h__incl.map  AdvrCommandMessage_8h__incl.md5  AdvrCommandMessage_8h_source.html  AdvrJointState_8cpp.html  AdvrJointState_8cpp__incl.map  AdvrJointState_8cpp__incl.md5  AdvrJointState_8cpp_source.html  AdvrJointState_8h.html  AdvrJointState_8h__dep__incl.map  AdvrJointState_8h__dep__incl.md5  AdvrJointState_8h__incl.map  AdvrJointState_8h__incl.md5  AdvrJointState_8h_source.html  All_8h.html  All_8h__dep__incl.map  All_8h__dep__incl.md5  All_8h__incl.map  All_8h__incl.md5  All_8h_source.html  CommunicationInterfaceROS_8cpp.html  CommunicationInterfaceROS_8cpp__incl.map  CommunicationInterfaceROS_8cpp__incl.md5  CommunicationInterfaceROS_8cpp_source.html  CommunicationInterfaceROS_8h.html  CommunicationInterfaceROS_8h__dep__incl.map  CommunicationInterfaceROS_8h__dep__incl.md5  CommunicationInterfaceROS_8h__incl.map  CommunicationInterfaceROS_8h__incl.md5  CommunicationInterfaceROS_8h_source.html  CommunicationInterfaceYARP_8cpp.html  CommunicationInterfaceYARP_8cpp__incl.map  CommunicationInterfaceYARP_8cpp__incl.md5  CommunicationInterfaceYARP_8cpp_source.html  (+760 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  (+57 more)
examples/: CMakeLists.txt
examples/include/: homing_example.h  id_example.h  ik_example.h  joint_space_demo_trajectory.h  play_joint_space_demo.h  twoprioritiy_rt_ik.h  twopriority_ik_plugin.h
examples/scripts/: impedance_publisher.py
examples/src/: example_ipc_nonrt.cpp  example_ipc_rt.cpp  example_rosutils.cpp  homing_example.cpp  id_example.cpp  ik_example.cpp  joint_space_demo_trajectory.cpp  play_joint_space_demo.cpp  twopriorirty_ik_plugin.cpp  twopriority_rt_ik.cpp
include/Web/: CircularBuffer.h  HttpCivetHandler.h  HttpHandler.h  HttpInterface.h  Request.h  Response.h  ResponseInterface.h  SharedData.h  WebRobotState.h  WebSocketCivetHandler.h
include/XBotCore/: ControllerInterface.h  Ethernet.h  HALInterface.h  HALInterfaceFactory.h  IXBotChain.h  IXBotCommunication.h  IXBotFT.h  IXBotJoint.h  IXBotModel.h  IXBotRobot.h  Kuka.h  Loader.h  RobotControlInterface.h  XBotCommunicationHandler.h  XBotCore.h  XBotCoreModel.hpp  XBotCoreThread.h  XBotCore_model.hpp  XBotCore_srdfdom.hpp  XBotEcat.h  XBotLoaderThread.h  XBotPipes.h  XBotPlugin.h  XBotPlugin.hpp  XBotPluginHandler.h  XBotSharedMemory.h  ec_boards_base.h
include/XBotCore-interfaces/: All.h  IXBotFT.h  IXBotHand.h  IXBotIMU.h  IXBotInit.h  IXBotJoint.h  IXBotModel.h  IXBotTransmission.h  RosSerialization.h  SoLib.h  XBotESC.h  XBotHandle.h  XBotOptions.h  XBotPipes.h  XBotPlugin.h  XBotRT_ipc.h  XBotRosUtils.h  XBotSharedMemory.h  XBotSharedObject.h  XBotTransmission.h  XDomainCommunication.h
include/XBotMemory/: XBotData.hpp  XBotSharedMemory.hpp
include/XBotPlugin/: RobotInterfaceXBotRT_test.h  XBotCommunicationPlugin.h  XBotCubicTrajectoryGenerator.h  XBotLoggingPlugin.h  XBotNRTRef.h  XBotTestPlugin.h  XBotYarpPlugin.h
include/XCM/: CommunicationInterfaceROS.h  CommunicationInterfaceWebServer.h  CommunicationInterfaceYARP.h  IOPlugin.h  IOPluginFactory.h  Loader.h  NRTDeployer.h  PluginFactory.h  TimeProvider.h  VN100.hpp  XBotCommunicationHandler.h  XBotCommunicationInterface.h  XBotCommunicationInterfaceFactory.h  XBotCommunicationInterfaceROS.h  XBotCommunicationInterfaceYARP.h  XBotControlModule.h  XBotControlPlugin.h  XBotESCUtils.h  XBotModuleHandler.h  XBotPluginHandler.h  XBotPluginStatus.h  (+3 more)
msg/: CommandAdvr.msg  JointStateAdvr.msg
scripts/: generate_XBot_IOPlugin.sh  generate_XBot_Plugin.sh  generate_XBot_PluginFSM.sh  generate_XBot_RT_Plugin.sh  generate_XBot_RT_PluginFSM.sh  set_cap.sh
src/: CommunicationInterfaceROS.cpp  CommunicationInterfaceWebServer.cpp  CommunicationInterfaceYARP.cpp  DummyMain.cpp  Ethernet.cpp  HALInterfaceFactory.cpp  IOPlugin.cpp  IOPluginFactory.cpp  Kuka.cpp  Loader.cpp  NRTDeployer.cpp  NRTDeployerMain.cpp  PluginFactory.cpp  RobotStateLogger.cpp  RosCommunicationInterface.cpp  XBotCommunicationHandler.cpp  XBotCommunicationInterfaceFactory.cpp  XBotCommunicationMain.cpp  XBotControlModule.cpp  XBotControlPlugin.cpp  XBotCore.cpp  XBotCoreThread.cpp  XBotCore_main.cpp  XBotESCUtils.cpp  XBotEcat.cpp  XBotLoaderThread.cpp  XBotMain.cpp  XBotModuleHandler.cpp  XBotNRT_thread.cpp  XBotPlugin.cpp  XBotPluginHandler.cpp  XBotPluginManager.cpp  XBotPluginStatus.cpp  XBotRT_ipc.cpp  XBotRT_thread.cpp  XBotXDDP.cpp  XBotYARPMain.cpp  XDomainCommunication.cpp  ec_boards_base.cpp  signal_handler.cpp
src/XBotPlugin/: CMakeLists.txt  RobotInterfaceXBotRT_test.cpp  XBotCommunicationPlugin.cpp  XBotCubicTrajectoryGenerator.cpp  XBotLoggingPlugin.cpp  XBotNRTRef.cpp  XBotTestPlugin.cpp
src/XBotYARP/XBotFT/: CMakeLists.txt  XBotFT.cpp  XBotFT.ini
src/XBotYARP/XBotMotionControl/: CMakeLists.txt  XBotMotionControl.cpp  XBotMotionControl.ini
src/XBotYARP/XBotVN100/: CMakeLists.txt  VN100.cpp  VN100.hpp  VN100.ini  run_VN100.ini
srv/: advr_controller_joint_names.srv  cmd_service.srv
(+38 files in other folders)
